<resources>
    <string name="app_name">FinalProject</string>
    <string name="welcome_string">ברוכים הבאים</string>
    <string name="username_string">שם משתמש:</string>
    <string name="password_string">סיסמה:</string>
    <string name="entrance_string">כניסה:</string>
    <string name="tillNot_string">עדיין לא נרשמת?</string>
    <string name="reg_string">הרשמה</string>
    <string name="heyUsername_string">היי עודד</string>
    <string name="currentPoints_string">נקודות עד כה:</string>
</resources>
