<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textDirection="anyRtl"
    tools:context="cs.finalproject.MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_edit"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/name_edit"
        android:layout_marginTop="29dp"
        android:text="@string/welcome_string"
        android:textAlignment="center"
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name_edit"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/name_edit"
        android:layout_toRightOf="@+id/name_edit"
        android:text="@string/username_string" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcome_text"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/name_text"
        android:layout_alignLeft="@+id/name_text"
        android:layout_alignRight="@+id/name_text"
        android:layout_alignStart="@+id/name_text"
        android:layout_below="@+id/name_text"
        android:layout_marginTop="25dp"
        android:text="@string/password_string" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_text"
        android:layout_alignLeft="@+id/name_edit"
        android:layout_alignStart="@+id/name_edit"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/entrance_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@android:color/background_dark"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:elevation="0dp"
        android:gravity="center"
        android:onClick="ChangeToStartActivity"
        android:text="@string/entrance_string"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tillNot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/entrance_button"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/entrance_button"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:text="@string/tillNot_string" />

    <TextView
        android:id="@+id/reg_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tillNot_text"
        android:layout_alignBottom="@+id/tillNot_text"
        android:layout_toLeftOf="@+id/tillNot_text"
        android:layout_toStartOf="@+id/tillNot_text"
        android:onClick="ChangeToRegistrationActivity"
        android:text="@string/reg_string" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entrance_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:id="@+id/all_button"
        android:onClick="getAll"/>

</RelativeLayout>
